@@ -16,6 +16,7 @@ ifneq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
     export STRIPFLAG=
 endif
 
+SOURCE = freebsd-buildutils
 VERSION = $(shell dpkg-parsechangelog | sed -e '/^Version:/!d' -e 's/^Version: //g' -e 's/-.*//g')
 SVN = http://svn.freebsd.org/base/release/$(VERSION).0
 
@@ -23,7 +24,9 @@ PVERSION = $(shell dpkg-parsechangelog | sed -e '/^Version:/!d' -e 's/^Version: 
 PCVS = anoncvs@anoncvs.fr.freebsd.org:/home/ncvs
 PTAG = RELEASE_$(PVERSION)_0
 
-ORIGDIR = freebsd-buildutils-$(VERSION)
+ORIGDIR = $(SOURCE)-$(VERSION)
+TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
+
 CFLAGS = -O2 -g -Wall -DMACHINE_ARCH='"$(DEB_HOST_ARCH_CPU)"' -DMACHINE_MULTIARCH='"$(DEB_HOST_MULTIARCH)"' -D_GNU_SOURCE -D'__FBSDID(string)=' -I$(CURDIR)/build-tree/src/sys
 MAKE_BUILD_FLAGS = CC=gcc NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO
 
@@ -31,7 +34,7 @@ PMAKE_BOOTSTRAP = $(CURDIR)/build-tree/src/usr.bin/make/pmake
 PMAKE = $(CURDIR)/build-tree/src/usr.bin/make/make
 YACC = $(CURDIR)/build-tree/src/usr.bin/yacc/yacc
 
-package = freebsd-buildutils
+package = $(SOURCE)
 
 get-orig-source:
 	rm -rf $(ORIGDIR)
@@ -55,7 +58,7 @@ get-orig-source:
 		svn export $(SVN)/$$i $(ORIGDIR)/src/$$i ; \
 	done
 	cd $(ORIGDIR); cvs -d $(PCVS) export -r $(PTAG) ports/Mk ; cd ..
-	tar --numeric-owner --owner 0 --group 0 -czf ../freebsd-buildutils_$(VERSION).orig.tar.gz $(ORIGDIR)
+	tar --numeric-owner --owner 0 --group 0 -czf ../$(TARNAME) $(ORIGDIR)
 	rm -rf $(ORIGDIR)
 
 unpack: unpack-stamp
